configure gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bts-group-case",
+  "homepage": "https://ezgikorkmmaz.github.io/bts-group-case",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
